fixed error or success message not showing in profile tab and center all content in profile tab for 1026px

--- a/sass/pages/_profile.scss
+++ b/sass/pages/_profile.scss
@@ -1,4 +1,6 @@
 .section__profile {
+  height: auto !important;
+
   & h3 {
     grid-column: span 2;
   }
@@ -6,6 +8,11 @@
   .profile__cont {
     display: flex;
     gap: 0 2rem;
+
+    @include respon(sm-desktop) {
+      max-width: 45rem;
+      margin-inline: auto;
+    }
 
     &-photo {
       margin: 0;
@@ -36,10 +43,13 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 0.5rem 0;
+  }
 
+  .profile__info,
+  .section__settings {
     @include respon(sm-desktop) {
-      max-width: 50rem;
-      justify-items: center;
+      max-width: 45rem;
+      margin-inline: auto;
     }
   }
 
@@ -65,14 +75,27 @@
     align-items: center;
     margin-top: 4rem;
 
+    @include respon(sm-desktop) {
+      margin-inline: auto;
+    }
+
     &--delete,
     &--edit {
       width: 80%;
+    }
+
+    @include respon(sm-desktop) {
+      width: 70%
     }
   }
 
   //error
   &>.message-cont {
     margin-top: 2rem;
+    margin-inline: auto;
+
+    @include respon(sm-desktop) {
+      width: 70%
+    }
   }
 }
